--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --button-bg-color: #3d484f;
     --dimmed-dark-red-color: #a7161679;
     --dimmed-lighter-red-color: #e62121;
+    --dimmed-dark-yellow-color: #bb9519af;
     --text-color: rgb(235, 235, 235);
 }
 *, *:before, *:after {
@@ -205,6 +206,7 @@ body {
 }
 
 .input-form {
+    font-size: 2rem;
     text-align: center;
     border-radius: 0.5rem;
     width: 31.5rem;
@@ -284,6 +286,9 @@ body {
     height: 3rem;
 }
 .error-container {
+    top: 0;
+    right: 0;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -318,3 +323,28 @@ body {
     flex-direction: column;
 }
 
+.warning-container {
+    top: 0;
+    right: 0;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.warning-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 1000000000;
+    width: 500px;
+    height: 250px;
+    color: var(--text-color);
+    background-color: var(--dimmed-dark-yellow-color);
+    font-size: 3rem;
+    text-align: center;
+    border-radius: 0.5rem;
+}
